--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,44 +1,30 @@
-# .github/workflows/upload.yml
-name: AutoUpload
+name: Advanced Auto Upload
 on:
   schedule:
-    - cron: '0 9,15,21 * * *'  # 하루 3회 실행
+    - cron: "0 8,12,16,20 * * *"  # 4회/일 실행
   workflow_dispatch:
 
 jobs:
-  production:
+  execute:
     runs-on: ubuntu-latest
-    timeout-minutes: 45
-    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
-        
-    - name: Install Python packages
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Configure environment
-      env:
-        OPENAI_API_KEYS: ${{ secrets.OPENAI_KEYS }}
-        ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
-        GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDS }}
-      run: |
-        echo "OPENAI_API_KEYS=${OPENAI_API_KEYS}" >> .env
-        echo "ELEVENLABS_KEY=${ELEVENLABS_KEY}" >> .env
-        echo "GOOGLE_CREDS=${GOOGLE_CREDS}" >> .env
-        
-    - name: Run production
-      run: |
-        python secure_main.py
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      
+      - name: Execute Bot
+        env:
+          OPENAI_KEYS: ${{ secrets.OPENAI_KEYS }}
+          ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
+          ELEVENLABS_VOICE_ID: ${{ secrets.VOICE_ID }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CSECRET }}
+          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_RTOKEN }}
+          TREND_KEYWORDS: ${{ secrets.TRENDS }}
+          DAILY_VIDEOS: ${{ secrets.DAILY_COUNT }}
+        run: python main.py
 
