--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-openai>=1.0.0,<2.0.0
-python-dotenv>=0.19.0
-google-api-python-client>=2.126.0
-google-auth-oauthlib>=1.2.0
-google-auth>=2.23.0
+pytrends>=4.9.2
+openai>=1.3.0
 elevenlabs>=0.2.12
-Pillow>=9.0.0
-moviepy==1.0.3
-ffmpeg-python==0.2.0
-numpy>=1.26.4
-requests
+google-api-python-client>=2.85.0
+moviepy>=1.0.3
+Pillow>=9.5.0
+python-dotenv>=0.21.0
